--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Scratchedit : ">
+    <meta name="description" content="ScratchEdit : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Scratchedit</title>
+    <title>ScratchEdit</title>
   </head>
 
   <body>
@@ -18,12 +18,11 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Dylan5797/ScratchEdit">View on GitHub</a>
 
-          <h1 id="project_title">Scratchedit</h1>
-          <h2 id="project_tagline"></h2>
+          <h1 id="project_title">ScratchEdit</h1>
+          <h2 id="project_tagline">A handy tool for hacking Scratch blocks</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/Dylan5797/ScratchEdit/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/Dylan5797/ScratchEdit/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/Dylan5797/ScratchEdit/zipball/master">Download ScratchEdit</a>
             </section>
         </header>
     </div>
