--- a/index.html
+++ b/index.html
@@ -29,11 +29,10 @@
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>A powerful tool for editing Scratch Projects</h3>
 
-<p><a href="http://scratch.mit.edu">Scratch</a>is an easy fun programming for all ages. But the editor does have some restrictions. For example, lots of people find this handy:</p>
+<p><a href="http://scratch.mit.edu">Scratch</a> is an easy fun programming for all ages. But the editor does have some restrictions. For example, lots of people find this handy:</p>
+<img src="http://u.cubeupload.com/Dylan5797/capture.png" alt="A Hacked Block" height="42">
 <h3>
-<img src="http://u.cubeupload.com/Dylan5797/capture.png" alt="A Hacked Block" height="42"></h3>
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates
 
 <p>We've crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
