--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <p><a href="http://scratch.mit.edu">Scratch</a> is an easy fun programming for all ages. But the editor does have some restrictions. For example, lots of people find this handy:</p>
 <img src="http://u.cubeupload.com/Dylan5797/capture.png" alt="A Hacked Block" height="42">
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>"Hacking" Blocks
 </h3>
 <p>Many users modify the JSON of a project, but it's highly complicated and annoying.</p>
 
