--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>"Hacking" Blocks
 </h3>
-<p>Many users modify the JSON of a project, but it's highly complicated and annoying.</p>
+<p>Many users modify the JSON of a project, but it's highly complicated and annoying. With Python's zipfile module, users don't have to extract the zip file to edit a Scratch project, jsut open up ScratchEdit and load your project!</p>
 
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
