--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Scratchedit maintained by <a href="https://github.com/Dylan5797">Dylan5797</a></p>
+        <p class="copyright">ScratchEdit is maintained by <a href="https://github.com/Dylan5797">Dylan5797</a></p>
         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
