--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="description" content="ScratchEdit">
-    <link rel="shortcut-icon" href="https://cloud.githubusercontent.com/assets/13187260/11077686/9fd2de90-87be-11e5-8dc0-27506a2461ca.png">
+    <link rel="shortcut icon" href="https://cloud.githubusercontent.com/assets/13187260/11077686/9fd2de90-87be-11e5-8dc0-27506a2461ca.png">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
     <title>ScratchEdit</title>
