--- a/index.html
+++ b/index.html
@@ -26,19 +26,13 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>A powerful tool for editing Scratch Projects</h3>
+        <h3>A powerful tool for editing Scratch Projects</h3>
 
 <p><a href="http://scratch.mit.edu">Scratch</a> is an easy fun programming for all ages. But the editor does have some restrictions. For example, lots of people find this handy:</p>
 <img src="http://u.cubeupload.com/Dylan5797/capture.png" alt="A Hacked Block" height="42">
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>"Hacking" Blocks
-</h3>
+<h3>"Hacking" Blocks</h3>
 <p>Many users modify the JSON of a project, but it's highly complicated and annoying. With Python's zipfile module, users don't have to extract the zip file to edit a Scratch project, jsut open up ScratchEdit and load your project!</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Download</h3>
-
+<h3>Download</h3>
 <p>Download ScratchEdit <a href="https://github.com/Dylan5797/ScratchEdit/archive/master.zip">here</a></p>
       </section>
     </div>
@@ -46,8 +40,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">ScratchEdit is maintained by <a href="https://github.com/Dylan5797">Dylan5797</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">ScratchEdit is developed by <a href="https://github.com/Dylan5797">Dylan5797</a> and <a href="https://github.com/wizzwizz4">wizzwiz4</a></p>
       </footer>
     </div>
 
