--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">ScratchEdit is developed by <a href="https://github.com/Dylan5797">Dylan5797</a> and <a href="https://github.com/wizzwizz4">wizzwiz4</a></p>
+        <p class="copyright">ScratchEdit is developed by <a href="https://github.com/Dylan5797">Dylan5797</a> and <a href="https://github.com/wizzwizz4">wizzwizz4</a></p>
       </footer>
     </div>
 
